--- a/dotInstrukcije.API/appsettings.json
+++ b/dotInstrukcije.API/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "SecretKey": "YourSecretKeyHere",
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience"
+  }
 }
