Implement Student Routes

--- a/dotInstrukcije.API/appsettings.json
+++ b/dotInstrukcije.API/appsettings.json
@@ -10,8 +10,9 @@
   },
   "AllowedHosts": "*",
   "JwtSettings": {
-    "SecretKey": "YourSecretKeyHere",
+    "SecretKey": "this_is_a_very_long_secret_key_that_is_at_least_32_characters",
     "Issuer": "YourIssuer",
-    "Audience": "YourAudience"
+    "Audience": "YourAudience",
+    "ExpireDays": "7"
   }
 }
